Variante controller opcion 2

--- a/app/index.html
+++ b/app/index.html
@@ -9,8 +9,8 @@
     
 </head>
 <body  ng-app="pruebaApp">
-    <div ng-controller="pruebaCtrl">
-       <p>{{algo}}</p> 
+    <div ng-controller="pruebaCtrl as vm">
+       <p>{{vm.algo}}</p> 
     </div>
  
 
